templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valko-ingress
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
 # ingressClassName: traefik
  rules:
    - host: test.v41k0.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-webapp-service
                port:
                  number: 80
